--- a/src/app/flex-canvas/flex-canvas.component.html
+++ b/src/app/flex-canvas/flex-canvas.component.html
@@ -107,8 +107,7 @@
                               (onRemove)="removeElement($event)" (onWarning)="notifyWarning($event)">
                   </koia-graph>
                </div>
-               <img src="./assets/resize-handle.gif" class="resize-handle" mwlResizeHandle
-                    [resizeEdges]="{ bottom: true, right: true }">
+               <img src="./assets/resize-handle.gif" class="resize-handle" mwlResizeHandle [resizeEdges]="{ bottom: true, right: true }">
             </div>
          </div>
       </div>
