--- a/src/app/chart/chart.component.css
+++ b/src/app/chart/chart.component.css
@@ -1,15 +1,48 @@
-mwlResizable {
-  box-sizing: border-box; 
-}
-
 #div_margins {
   position: absolute;
   border: 1px dashed green;
+  z-index: 1;
+}
+
+mwlResizable {
+  box-sizing: border-box;
+}
+
+.resize-handle-top,
+.resize-handle-bottom {
+  position: absolute;
+  height: 4px;
+  cursor: row-resize;
+  width: 100%;
+}
+
+.resize-handle-top {
+  top: 0;
+}
+
+.resize-handle-bottom {
+  bottom: 0;
+}
+
+.resize-handle-left,
+.resize-handle-right {
+  position: absolute;
+  height: 100%;
+  cursor: col-resize;
+  width: 4px;
+}
+
+.resize-handle-left {
+  left: 0;
+}
+
+.resize-handle-right {
+  right: 0;
 }
 
 #div_chartjs {
   position: relative;
-  display: block; 
-  width:100%; 
+  display: block;
+  width: 100%;
   height: 100%;
 }
