--- a/src/app/chart/chart-side-bar/chart-side-bar.component.html
+++ b/src/app/chart/chart-side-bar/chart-side-bar.component.html
@@ -29,161 +29,175 @@
    </mat-select>
 </mat-form-field>
 
-<mat-accordion *ngIf="context" [multi]="multiExpandable">
+<div style="padding: 0 5px 0 5px;">
+   <mat-accordion *ngIf="context" [multi]="multiExpandable">
 
-   <mat-expansion-panel expanded="true">
-      <mat-expansion-panel-header>{{ dataPanelName() }}</mat-expansion-panel-header>
-      <div>
-         <button class="but_column" mat-raised-button *ngFor="let column of selectableDataColumns"
-                 [color]="context.dataColumns.includes(column) ? 'accent' : ''" (click)="onColumnChanged(column)">
-            <mat-icon>{{ iconOf(column.dataType) }}</mat-icon>
-            {{ column.name }}
-         </button>
-      </div>
-      <br>
-      <div>
-         <mat-radio-group [value]="context.isAggregationCountSelected()">
-            <mat-radio-button [value]="true" [disabled]="!countDistinctValuesEnabled"
-                              (change)="onAggregationTypeChanged(true)">
-               Count Distinct Values
-            </mat-radio-button>
-            <mat-radio-button [value]="false" [disabled]="!individualValuesEnabled"
-                              (change)="onAggregationTypeChanged(false)">
-               {{ context.isCircularChart() ? 'Unique Named' : 'Individual' }} Values
-            </mat-radio-button>
-         </mat-radio-group>&nbsp;&nbsp;&nbsp;
-         <mat-checkbox *ngIf="!context.isCircularChart()" class="example-margin" [(ngModel)]="context.stacked"> Stacked
-         </mat-checkbox>
-      </div>
-   </mat-expansion-panel>
-
-   <mat-expansion-panel *ngIf="context.isCircularChart() && !context.isAggregationCountSelected()">
-      <mat-expansion-panel-header>Names</mat-expansion-panel-header>
-
-      <mat-form-field>
-         <mat-select placeholder="Name Column" [value]="getSingleGroupByColumn()">
-            <mat-select-trigger>
-               <mat-icon style="vertical-align: middle" *ngIf="getSingleGroupByColumn()">
-                  {{ iconOf(getSingleGroupByColumn().dataType) }}</mat-icon>
-               {{ getSingleGroupByColumn() ? getSingleGroupByColumn().name : '' }}
-            </mat-select-trigger>
-            <mat-option *ngFor="let column of context.columns" [value]="column"
-                        (click)="context.groupByColumns = [column]">
+      <mat-expansion-panel expanded="true">
+         <mat-expansion-panel-header>
+            <h4>{{ dataPanelName() }}</h4>
+         </mat-expansion-panel-header>
+         <div>
+            <button class="but_column" mat-raised-button *ngFor="let column of selectableDataColumns"
+                    [color]="context.dataColumns.includes(column) ? 'accent' : ''" (click)="onColumnChanged(column)">
                <mat-icon>{{ iconOf(column.dataType) }}</mat-icon>
                {{ column.name }}
-            </mat-option>
-         </mat-select>
-      </mat-form-field>
-   </mat-expansion-panel>
-
-   <mat-expansion-panel *ngIf="!context.isCategoryChart()">
-      <mat-expansion-panel-header>Value Splitting</mat-expansion-panel-header>
-
-      <div div_column_swap_list>
-         <span class="span_left_to_right">
-            <label>Selected Columns</label>
-            <mat-icon matTooltipClass="multi-line-tooltip"
-                      matTooltip="Drag & Drop available columns to make them selected
-
-            Values are shown separately for distinct content of the selected split columns. If any split column cell is empty, the value is ignored">
-               help
-            </mat-icon>
-         </span>
-         <div id="selectedSplitColumns" #selectedColList="cdkDropList" cdkDropList #selectedColumnsList="cdkDropList"
-              [cdkDropListData]="selectedSplitColumns" [cdkDropListConnectedTo]="availableColList"
-              class="div_column_list"
-              (cdkDropListDropped)="dropSplitColumn($event)">
-            <div class="div_column_item accent" mat-stroked-button *ngFor="let column of selectedSplitColumns" cdkDrag>
-               <mat-icon>{{ iconOf(column.dataType) }}</mat-icon>&nbsp;{{ column.name }}
-            </div>
+            </button>
          </div>
          <br>
-         <label>Available Columns</label>
-         <div #availableColList="cdkDropList" cdkDropList [cdkDropListData]="availableSplitColumns"
-              [cdkDropListConnectedTo]="selectedColList" class="div_column_list"
-              (cdkDropListDropped)="dropSplitColumn($event)">
-            <div class="div_column_item white" mat-stroked-button *ngFor="let column of availableSplitColumns" cdkDrag>
-               <mat-icon>{{ iconOf(column.dataType) }}</mat-icon>&nbsp;{{ column.name }}
+         <div>
+            <mat-radio-group [value]="context.isAggregationCountSelected()">
+               <mat-radio-button [value]="true" [disabled]="!countDistinctValuesEnabled"
+                                 (change)="onAggregationTypeChanged(true)">
+                  Count Distinct Values
+               </mat-radio-button>
+               <mat-radio-button [value]="false" [disabled]="!individualValuesEnabled"
+                                 (change)="onAggregationTypeChanged(false)">
+                  {{ context.isCircularChart() ? 'Unique Named' : 'Individual' }} Values
+               </mat-radio-button>
+            </mat-radio-group>&nbsp;&nbsp;&nbsp;
+            <mat-checkbox *ngIf="!context.isCircularChart()" class="example-margin" [(ngModel)]="context.stacked"> Stacked
+            </mat-checkbox>
+         </div>
+      </mat-expansion-panel>
+
+      <mat-expansion-panel *ngIf="context.isCircularChart() && !context.isAggregationCountSelected()">
+         <mat-expansion-panel-header>
+            <h4>Names</h4>
+         </mat-expansion-panel-header>
+
+         <mat-form-field>
+            <mat-select placeholder="Name Column" [value]="getSingleGroupByColumn()">
+               <mat-select-trigger>
+                  <mat-icon style="vertical-align: middle" *ngIf="getSingleGroupByColumn()">
+                     {{ iconOf(getSingleGroupByColumn().dataType) }}</mat-icon>
+                  {{ getSingleGroupByColumn() ? getSingleGroupByColumn().name : '' }}
+               </mat-select-trigger>
+               <mat-option *ngFor="let column of context.columns" [value]="column"
+                           (click)="context.groupByColumns = [column]">
+                  <mat-icon>{{ iconOf(column.dataType) }}</mat-icon>
+                  {{ column.name }}
+               </mat-option>
+            </mat-select>
+         </mat-form-field>
+      </mat-expansion-panel>
+
+      <mat-expansion-panel *ngIf="!context.isCategoryChart()">
+         <mat-expansion-panel-header>
+            <h4>Value Splitting</h4>
+         </mat-expansion-panel-header>
+
+         <div div_column_swap_list>
+            <span class="span_left_to_right">
+               <label>Selected Columns</label>
+               <mat-icon matTooltipClass="multi-line-tooltip"
+                         matTooltip="Drag & Drop available columns to make them selected
+
+            Values are shown separately for distinct content of the selected split columns. If any split column cell is empty, the value is ignored">
+                  help
+               </mat-icon>
+            </span>
+            <div id="selectedSplitColumns" #selectedColList="cdkDropList" cdkDropList #selectedColumnsList="cdkDropList"
+                 [cdkDropListData]="selectedSplitColumns" [cdkDropListConnectedTo]="availableColList"
+                 class="div_column_list"
+                 (cdkDropListDropped)="dropSplitColumn($event)">
+               <div class="div_column_item accent" mat-stroked-button *ngFor="let column of selectedSplitColumns" cdkDrag>
+                  <mat-icon>{{ iconOf(column.dataType) }}</mat-icon>&nbsp;{{ column.name }}
+               </div>
+            </div>
+            <br>
+            <label>Available Columns</label>
+            <div #availableColList="cdkDropList" cdkDropList [cdkDropListData]="availableSplitColumns"
+                 [cdkDropListConnectedTo]="selectedColList" class="div_column_list"
+                 (cdkDropListDropped)="dropSplitColumn($event)">
+               <div class="div_column_item white" mat-stroked-button *ngFor="let column of availableSplitColumns" cdkDrag>
+                  <mat-icon>{{ iconOf(column.dataType) }}</mat-icon>&nbsp;{{ column.name }}
+               </div>
             </div>
          </div>
-      </div>
-   </mat-expansion-panel>
+      </mat-expansion-panel>
 
-   <mat-expansion-panel
-                        *ngIf="!context.isCircularChart() && !(context.isCategoryChart() && context.isAggregationCountSelected())">
-      <mat-expansion-panel-header>{{ groupingPanelName() }}</mat-expansion-panel-header>
+      <mat-expansion-panel
+                           *ngIf="!context.isCircularChart() && !(context.isCategoryChart() && context.isAggregationCountSelected())">
+         <mat-expansion-panel-header>
+            <h4>{{ groupingPanelName() }}</h4>
+         </mat-expansion-panel-header>
 
-      <mat-form-field>
-         <mat-select [placeholder]="context.isCategoryChart() ? 'Column Name' : 'Group by'"
-                     [value]="getSingleGroupByColumn()">
-            <mat-select-trigger>
-               <mat-icon style="vertical-align: middle" *ngIf="getSingleGroupByColumn()">
-                  {{ iconOf(getSingleGroupByColumn().dataType) }}</mat-icon>
-               {{ getSingleGroupByColumn() ? getSingleGroupByColumn().name : '' }}
-            </mat-select-trigger>
-            <mat-option *ngFor="let column of selectableGroupByColumns()" [value]="column"
-                        (click)="onGroupByColumnChanged(column)">
-               <mat-icon>{{ iconOf(column.dataType) }}</mat-icon>
-               {{ column.name }}
-            </mat-option>
-         </mat-select>
-      </mat-form-field>
+         <mat-form-field>
+            <mat-select [placeholder]="context.isCategoryChart() ? 'Column Name' : 'Group by'"
+                        [value]="getSingleGroupByColumn()">
+               <mat-select-trigger>
+                  <mat-icon style="vertical-align: middle" *ngIf="getSingleGroupByColumn()">
+                     {{ iconOf(getSingleGroupByColumn().dataType) }}</mat-icon>
+                  {{ getSingleGroupByColumn() ? getSingleGroupByColumn().name : '' }}
+               </mat-select-trigger>
+               <mat-option *ngFor="let column of selectableGroupByColumns()" [value]="column"
+                           (click)="onGroupByColumnChanged(column)">
+                  <mat-icon>{{ iconOf(column.dataType) }}</mat-icon>
+                  {{ column.name }}
+               </mat-option>
+            </mat-select>
+         </mat-form-field>
 
-      <mat-form-field *ngIf="context.isAggregationCountSelected() && groupByTimeColumn">
-         <mat-select placeholder="Time Unit Grouping" [(ngModel)]="groupByTimeColumn.groupingTimeUnit">
-            <mat-option *ngFor="let timeUnit of selectableTimeUnits" [value]="timeUnit"
-                        (click)="context.fireStructureChanged()">{{ timeUnit }}</mat-option>
-         </mat-select>
-      </mat-form-field>
+         <mat-form-field *ngIf="context.isAggregationCountSelected() && groupByTimeColumn">
+            <mat-select placeholder="Time Unit Grouping" [(ngModel)]="groupByTimeColumn.groupingTimeUnit">
+               <mat-option *ngFor="let timeUnit of selectableTimeUnits" [value]="timeUnit"
+                           (click)="context.fireStructureChanged()">{{ timeUnit }}</mat-option>
+            </mat-select>
+         </mat-form-field>
 
-   </mat-expansion-panel>
+      </mat-expansion-panel>
 
-   <mat-expansion-panel>
-      <mat-expansion-panel-header>Position {{ gridColumns ? ' & Size' : '' }}</mat-expansion-panel-header>
-      <mat-form-field class="field_small_integer" *ngIf="gridColumns">
-         <mat-select placeholder="Columns" [value]="context.gridColumnSpan">
-            <mat-option *ngFor="let span of gridColumnSpans" [value]="span" (click)="context.gridColumnSpan = span">
-               {{ span }}
-            </mat-option>
-         </mat-select>
-      </mat-form-field>
-      <mat-form-field class="field_small_integer" *ngIf="gridColumns">
-         <mat-select placeholder="Rows" [value]="context.gridRowSpan">
-            <mat-option *ngFor="let span of gridRowSpans" [value]="span" (click)="context.gridRowSpan = span">
-               {{ span }}
-            </mat-option>
-         </mat-select>
-      </mat-form-field>
-      <mat-form-field class="field_small_integer">
-         <mat-select placeholder="Position" [value]="elementPosition">
-            <mat-option *ngFor="let position of elementPositions" [value]="position"
-                        (click)="setElementPosition(position)">
-               {{ position }}
-            </mat-option>
-         </mat-select>
-      </mat-form-field>
-   </mat-expansion-panel>
+      <mat-expansion-panel>
+         <mat-expansion-panel-header>
+            <h4>Position {{ gridColumns ? ' & Size' : '' }}</h4>
+         </mat-expansion-panel-header>
+         <mat-form-field class="field_small_integer" *ngIf="gridColumns">
+            <mat-select placeholder="Columns" [value]="context.gridColumnSpan">
+               <mat-option *ngFor="let span of gridColumnSpans" [value]="span" (click)="context.gridColumnSpan = span">
+                  {{ span }}
+               </mat-option>
+            </mat-select>
+         </mat-form-field>
+         <mat-form-field class="field_small_integer" *ngIf="gridColumns">
+            <mat-select placeholder="Rows" [value]="context.gridRowSpan">
+               <mat-option *ngFor="let span of gridRowSpans" [value]="span" (click)="context.gridRowSpan = span">
+                  {{ span }}
+               </mat-option>
+            </mat-select>
+         </mat-form-field>
+         <mat-form-field class="field_small_integer">
+            <mat-select placeholder="Position" [value]="elementPosition">
+               <mat-option *ngFor="let position of elementPositions" [value]="position"
+                           (click)="setElementPosition(position)">
+                  {{ position }}
+               </mat-option>
+            </mat-select>
+         </mat-form-field>
+      </mat-expansion-panel>
 
-   <mat-expansion-panel>
-      <mat-expansion-panel-header>Labels & Legend </mat-expansion-panel-header>
-      <mat-slide-toggle *ngIf="isCircularChart()" [(ngModel)]="context.valueAsPercent">Percent Value Labels
-      </mat-slide-toggle>
-      <div *ngIf="!isCircularChart()" class="div_label_rotation">
-         X-Axis Label Rotation
-         <mat-slider min="0" max="90" step="1" [value]="- context.xLabelRotation"
-                     (change)="context.xLabelRotation = -$event.value"></mat-slider>
-      </div>
-      <span class="span_row" *ngIf="context.chartType !== 'discreteBarChart'">
-         <mat-slide-toggle [(ngModel)]="context.showLegend">Show Legend</mat-slide-toggle>
-         <button mat-button *ngIf="context.showLegend && context.chartType !== 'scatterChart'"
-                 [matMenuTriggerFor]="menu" color="accent">{{
-            context.legendPosition }}</button>
-         <mat-menu #menu="matMenu">
-            <button mat-menu-item class="menu_item_legend_position" *ngFor="let position of legendPositions"
-                    (click)="context.legendPosition = position"
-                    [disabled]="context.isCurrentLegendPosition(position)">{{
-               position }}</button>
-         </mat-menu>
-      </span>
-   </mat-expansion-panel>
-</mat-accordion>
+      <mat-expansion-panel>
+         <mat-expansion-panel-header>
+            <h4>Labels & Legend</h4>
+         </mat-expansion-panel-header>
+         <mat-slide-toggle *ngIf="isCircularChart()" [(ngModel)]="context.valueAsPercent">Percent Value Labels
+         </mat-slide-toggle>
+         <div *ngIf="!isCircularChart()" class="div_label_rotation">
+            X-Axis Label Rotation
+            <mat-slider min="0" max="90" step="1" [value]="- context.xLabelRotation"
+                        (change)="context.xLabelRotation = -$event.value"></mat-slider>
+         </div>
+         <span class="span_row" *ngIf="context.chartType !== 'discreteBarChart'">
+            <mat-slide-toggle [(ngModel)]="context.showLegend">Show Legend</mat-slide-toggle>
+            <button mat-button *ngIf="context.showLegend && context.chartType !== 'scatterChart'"
+                    [matMenuTriggerFor]="menu" color="accent">{{
+               context.legendPosition }}</button>
+            <mat-menu #menu="matMenu">
+               <button mat-menu-item class="menu_item_legend_position" *ngFor="let position of legendPositions"
+                       (click)="context.legendPosition = position"
+                       [disabled]="context.isCurrentLegendPosition(position)">{{
+                  position }}</button>
+            </mat-menu>
+         </span>
+      </mat-expansion-panel>
+   </mat-accordion>
+</div>
