--- a/src/app/pivot-table/pivot-table-side-bar/pivot-table-side-bar.component.html
+++ b/src/app/pivot-table/pivot-table-side-bar/pivot-table-side-bar.component.html
@@ -1,6 +1,6 @@
 <div class="div_accordion_options">
    <mat-slide-toggle class="toggle_multi_expand" [(ngModel)]="multiExpandable"
-      (change)="onMultiExpandableChanged($event.checked)">
+                     (change)="onMultiExpandableChanged($event.checked)">
       Multi Expansion
    </mat-slide-toggle>
    <span class="span_exp_collapse_all" *ngIf="multiExpandable">
@@ -10,7 +10,7 @@
       <button mat-button mat-icon-button matTooltip="Collapse all" (click)="accordion.closeAll()">
          <mat-icon>expand_less</mat-icon>
       </button>
-   </span>   
+   </span>
    <span class="span_add_group" *ngIf="nonGroupedColumns && nonGroupedColumns.length > 0">
       <mat-form-field>
          <mat-select #nonGroupedCols placeholder="Non Grouped Columns" [value]="nonGroupedColumns[0]">
@@ -20,38 +20,43 @@
          </mat-select>
       </mat-form-field>
       <button mat-button mat-icon-button matTooltip="Add Grouping Definition" [disabled]="!nonGroupedCols.value"
-         (click)="addValueGrouping(nonGroupedCols.value)">
+              (click)="addValueGrouping(nonGroupedCols.value)">
          <mat-icon>add_circle_outline</mat-icon>
       </button>
    </span>
 </div>
 <hr>
-<mat-accordion [multi]="multiExpandable" *ngIf="context">
-   <mat-expansion-panel *ngFor="let grouping of context.valueGroupings">
-      <mat-expansion-panel-header>
-         <mat-panel-title>{{ grouping.columnName + ' Grouping' }}</mat-panel-title>
-         <mat-panel-description>
-            <mat-icon class="icon_remove" (click)="removeValueGrouping(grouping)">delete_forever</mat-icon>
-         </mat-panel-description>
-      </mat-expansion-panel-header>
-      <span class="span_left_to_right">
-         <label>max. {{ grouping.minMaxValues.max | number }}</label>
-         <button mat-button mat-icon-button matTooltip="Add Value Range" (click)="addGroupingRange(grouping)">
-            <mat-icon>add_circle_outline</mat-icon>
-         </button>
-      </span>
-      <div class="div_group_values" cdkDropList (cdkDropListDropped)="dropGroupingRange(grouping, $event)">
-         <div class="div_group_value" mat-stroked-button *ngFor="let range of grouping.ranges" cdkDrag>
-            <mat-checkbox class="example-margin" [(ngModel)]="range.active"></mat-checkbox>
-            <label for="rangeMaxValue" matTooltip="Excluding upper value boundary">Up&nbsp;to:</label>
-            <input id="rangeMaxValue" matInput type="number" placeholder="Range max. Value" [(ngModel)]="range.max"
-               matTooltip="Excluding upper value boundary" (keypress)="isNumberKey($event)">
-            <mat-icon class="icon_remove" *ngIf="grouping.ranges.length > 1"
-               (click)="removeGroupingRange(grouping, range)">
-               remove_circle_outline
-            </mat-icon>
+
+<div style="padding: 0 5px 0 5px;">
+   <mat-accordion [multi]="multiExpandable" *ngIf="context">
+      <mat-expansion-panel *ngFor="let grouping of context.valueGroupings">
+         <mat-expansion-panel-header>
+            <mat-panel-title>
+               <h4>{{ grouping.columnName + ' Grouping' }}</h4>
+            </mat-panel-title>
+            <mat-panel-description>
+               <mat-icon class="icon_remove" (click)="removeValueGrouping(grouping)">delete_forever</mat-icon>
+            </mat-panel-description>
+         </mat-expansion-panel-header>
+         <span class="span_left_to_right">
+            <label>max. {{ grouping.minMaxValues.max | number }}</label>
+            <button mat-button mat-icon-button matTooltip="Add Value Range" (click)="addGroupingRange(grouping)">
+               <mat-icon>add_circle_outline</mat-icon>
+            </button>
+         </span>
+         <div class="div_group_values" cdkDropList (cdkDropListDropped)="dropGroupingRange(grouping, $event)">
+            <div class="div_group_value" mat-stroked-button *ngFor="let range of grouping.ranges" cdkDrag>
+               <mat-checkbox class="example-margin" [(ngModel)]="range.active"></mat-checkbox>
+               <label for="rangeMaxValue" matTooltip="Excluding upper value boundary">Up&nbsp;to:</label>
+               <input id="rangeMaxValue" matInput type="number" placeholder="Range max. Value" [(ngModel)]="range.max"
+                      matTooltip="Excluding upper value boundary" (keypress)="isNumberKey($event)">
+               <mat-icon class="icon_remove" *ngIf="grouping.ranges.length > 1"
+                         (click)="removeGroupingRange(grouping, range)">
+                  remove_circle_outline
+               </mat-icon>
+            </div>
          </div>
-      </div>
-      <label>min. {{ grouping.minMaxValues.min | number }}</label>
-   </mat-expansion-panel>
-</mat-accordion>
+         <label>min. {{ grouping.minMaxValues.min | number }}</label>
+      </mat-expansion-panel>
+   </mat-accordion>
+</div>
