--- a/src/app/pivot-table/pivot-table.component.css
+++ b/src/app/pivot-table/pivot-table.component.css
@@ -16,19 +16,21 @@
 }
 
 .but_config {
-  z-index: 1; /* otherwise, it doesn't stay behind sticky header when scrolling */ 
+  /* otherwise, it doesn't stay behind sticky header when scrolling */
+  z-index: 1;
 }
 
 .mat-badge .mat-badge-content {
   font-size: 10px;
 }
 
-/* below definitions overwrite defaults from node_modules/pivottable/dist/pivot.css */
-.pvtUi { 
-  background-color: white !important;;
+/* below definitions overwrites defaults from node_modules/pivottable/dist/pivot.css */
+.pvtUi {
+  background-color: white !important;
 }
 
-table.pvtTable thead tr th, table.pvtTable tbody tr th {
+table.pvtTable thead tr th,
+table.pvtTable tbody tr th {
   background-color: #CFD8DC !important;
   border: 1px solid white !important;
 }
@@ -39,8 +41,9 @@ table.pvtTable td {
   cursor: pointer;
 }
 
-.pvtAxisContainer, .pvtVals {
-  background: #ECEFF1  !important;
+.pvtAxisContainer,
+.pvtVals {
+  background: #ECEFF1 !important;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -51,6 +54,7 @@ table.pvtTable td {
   border: 1px solid #90A4AE !important;
 }
 
-.pvtFilterBox { 
-  z-index: 1000 !important; /* must overlap sticky header */
+.pvtFilterBox {
+  /* must overlap sticky header */
+  z-index: 1000 !important;
 }
